# scrapbot

./: .gitignore  README.md  pyproject.toml  scrapy.cfg
scrapbot/: __init__.py  __main__.py  cli.py  settings.py
scrapbot/spiders/: __init__.py  openstax_book.py
tests/: test_openstax_book.py
