[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "scrapbot"
version = "0.1.0"
description = "Kapsamı tek bir OpenStax kitabıyla sınırlı Scrapy tabanlı kazıyıcı"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "Scrapy>=2.13,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
]

[project.scripts]
scrapbot = "scrapbot.cli:main"

[tool.setuptools.packages.find]
include = ["scrapbot*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

